[package]
name = "pond"
version = "0.3.1"
authors = ["Kalle Samuels <ks@ks.ax>"]
license = "BSD-2-Clause"
readme = "Readme.md"
description = "A library for scoped and cached threadpools that keep a state."
repository = "https://github.com/njaard/pond"
keywords = ["scoped", "pool", "threadpool", "stateful", "state"]
documentation = "https://docs.rs/pond/"

[dependencies]
num_cpus = "1"
